--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Веб студия Ильи Науменко дизайн сайта</title>
+	<title>Веб студия Ильи Науменко. Создание сайтов.</title>
 	<link rel="shortcut icon" href="img/favicons/favicon.ico">
 	<link rel="icon" sizes="16x16 32x32 64x64" href="img/favicons/favicon.ico">
 	<link rel="icon" type="image/png" sizes="196x196" href="img/favicons/favicon-192.png">
