--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zxx">
 
 <head>
+	<meta name="yandex-verification" content="7fa34859871caa05" />
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
